<resources>
    <string name="eout_app_name">eatout</string>
    <string name="eout_hint_name">Имя</string>
    <string name="eout_hint_surname">Фамилия</string>
    <string name="eout_hint_email">Электронная почта</string>
    <string name="eout_hint_password">Пароль</string>
    <string name="eout_button_next">Далее</string>
    <string name="eout_button_register">Еще не зарегистрированы?</string>
    <string name="eout_button_registration">Зарегистрироваться</string>
    <string name="eout_button_order">Заказать</string>
    <string name="eout_error_password">Пароль должен быть длиннее 8 символов</string>
    <string name="eout_error_login">Пользователь с такими данными не найден</string>
    <string name="eout_error_registration">Ошибка регистрации, соединение прервано</string>
    <string name="eout_filter_title">Фильтр</string>
    <string name="eout_search_title">Поиск</string>
    <string name="eout_top_bar_closest">Рестораны рядом</string>
    <string name="eout_top_bar_menu">Меню</string>
    <string name="eout_top_bar_sales">Акции</string>
    <string name="eout_top_bar_cart">Корзина</string>
    <string name="eout_top_bar_favourites">Избранное</string>
    <string name="eout_top_bar_categories">По категориям</string>
    <string name="eout_top_bar_orders">Заказы</string>
    <string name="eout_top_bar_map">Карта</string>
    <string name="eout_top_bar_preferences">Настройки</string>
    <string name="eout_top_bar_feedback">Обратная связь</string>
    <string name="eout_product_title">Title</string>
    <string name="eout_product_time_beg">Время приготовления:</string>
    <string name="eout_product_time">Время</string>
    <string name="eout_product_description">Secondary text</string>
    <string name="eout_cart_total">Итого:</string>
    <string name="eout_cart_time">Время приготовления:</string>
    <string name="eout_order_number">Номер заказа:</string>
    <string name="eout_order_placed">Номер заказа:</string>

    <!-- Backdrop menu labels -->
    <string name="eout_cart_label">Корзина</string>
    <string name="eout_closest_label">Рестораны рядом</string>
    <string name="eout_categories_label">По категориям</string>
    <string name="eout_sales_label">Aкции</string>
    <string name="eout_favourites_label">Избранное</string>
    <string name="eout_orders_label">Заказы</string>
    <string name="eout_map_label">Карта</string>
    <string name="eout_preferences_label">Настройки</string>
    <string name="eout_feedback_label">Обратная связь</string>
</resources>
