<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CafeGridFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Eatout.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/eout_menu"
            app:title="@string/eout_top_bar_closest" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/product_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cart_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <View
                android:layout_width="56dp"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="?android:attr/textColorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cart_total_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/eout_cart_total"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/eout_product_title"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/cart_time_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/eout_cart_time"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColorShade"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_time_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/eout_product_title"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/textColorShade"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>

    <android.support.design.button.MaterialButton
        android:id="@+id/order_button"
        style="@style/Widget.Eatout.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:text="@string/eout_button_order" />

    <LinearLayout
        style="@style/Widget.Eatout.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:paddingBottom="100dp">

        <include layout="@layout/eout_backdrop" />

    </LinearLayout>
</FrameLayout>