<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/productGridBackgroundColor"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/order_ID_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/eout_order_number"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/eout_product_title"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/textColorShade" />

        </LinearLayout>

        <TextView
            android:id="@+id/order_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/eout_product_title"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/textColorShade" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="?android:attr/textColorPrimary" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/order_product_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <View
            android:layout_width="56dp"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:id="@+id/order_total_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/eout_cart_total"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/eout_product_title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</android.support.design.card.MaterialCardView>
